Fix some errors
- When building, RSS was complaining about the pubDate attribute missing
  in blogposts -> renamed date to pubDate
- Some layout problems in blogposts

--- a/src/styles/layout.sass
+++ b/src/styles/layout.sass
@@ -6,9 +6,6 @@
   flex-grow: 1
 
 .children
-  display: flex
-  flex-direction: column
-  flex-grow: 1
   max-width: 100%
   width: Min(65ch, 95vw)
 
